--- a/client/styles/Room.module.css
+++ b/client/styles/Room.module.css
@@ -1,6 +1,6 @@
 .wrapper {
     width: 250px;
-    background-color: rgba(256, 256, 256, 0.8);
+    background-color:darkslategrey;
     height: 100vh;
     padding: 1rem;
     border-right: solid 2px #333;
