--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -7,7 +7,7 @@ body {
 }
 
 body {
-  background-image: url("../public/chat-bg1.jpg");
+  background-image: url("../public/bg-chat.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
